# rust-kubernetes-operator-example

./: Cargo.toml  LICENSE  README.md  echo-example.yaml  echoes.example.com.yaml
.github/workflows/: rust.yml
src/: crd.rs  echo.rs  finalizer.rs  main.rs
